# markdown-gate

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.codex/: hooks.json
.github/workflows/: ci.yml
evals/: promptfooconfig.llm.yaml  promptfooconfig.yaml
evals/providers/: markdown-gate-provider.cjs
evals/rubrics/: final-state.md
hooks/codex/: hooks.example.json  post_tool_use.py  pre_tool_use.py  stop.py
markdown_gate/: __init__.py  classifier.py  cli.py  config.py  frontmatter.py  hook_output.py  hook_runtime.py  install.py  model.py  report.py  scanner.py  waiver.py
rules/: example.markdown-gate.toml  schema.json
rules/builtin/: final-state-residue.toml
src/: classifier.ts  cli.ts  config.ts  frontmatter.ts  gate.ts  glob.ts  hook-output.ts  index.ts  install.ts  model.ts  report.ts  rules.ts  scanner.ts  waiver.ts
src/hooks/: post-tool-use.ts  pre-tool-use.ts  shared.ts  stop.ts
tests/: classifier.test.ts  gate.test.ts  hooks.test.ts  rules.test.ts  scanner.test.ts  test_classifier.py  test_cli.py  test_hooks.py  test_scanner.py
tests/fixtures/: adr_allowed.md  api_clean.md  api_dirty.md
